@@ -425,6 +425,7 @@ Upgrade Notes
 
 New Features
 ----------------------
+
 * SOLR-11285: Simulation framework for autoscaling. (ab)
 
 * LUCENE-2899: In the Solr analysis-extras contrib, added support for the
@@ -533,6 +534,10 @@ New Features
 
 Bug Fixes
 ----------------------
+
+* SOLR-5351: Fixed More Like This Handler to use all fields provided in mlt.fl when used with
+  content stream. The similarity is calculated between the content stream's value and all 
+  fields listed in mlt.fl. (Dawid Weiss)
 
 * SOLR-11783: Rename core in solr standalone mode is not persisted (Erick Erickson)
 
